added resolutionurl column in cf_policy table and resoutionurl for policies in db and ui changes for resolution

--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.css
@@ -83,6 +83,8 @@
   margin-left: auto;
 }
 .pk-resolution-wrapper {
+  display: flex;
+  flex-direction: row;
   padding-top: 1.5em;
   font-size: 1.2em;
   font-family: var(--text-light-font-family);
