--- a/webapp/src/app/pacman-features/secondary-components/issue-exception/issue-exception.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/issue-exception/issue-exception.component.css
@@ -28,8 +28,8 @@
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   z-index: 15;
-  top: 0;
-  right: 0;
+  /* top: 0; */
+  /* right: 0; */
   bottom: 0;
   margin: auto;
   width: 35em;
@@ -37,7 +37,10 @@
   color: #000;
   box-shadow: 0 3px 4px 0 #0000001e, 0 2px 4px 0 #00000023;
   border: 1px solid #ededed;
-  height: 100%;
+  /* height: 100%; */
+  height: calc(80vh);
+top: 90px;
+right: 29px;
 }
 
 .recommend-flip {
