--- a/webapp/src/app/shared/data-table/data-table.component.css
+++ b/webapp/src/app/shared/data-table/data-table.component.css
@@ -12,11 +12,125 @@
  * limitations under the License.
  */
 
+ .add-filter-button{
+  padding: 0px;
+  height: 30px;
+  width: 100px;
+  background-color: var(--background-white);
+  border: none;
+  display: flex;
+  align-items: center;
+ }
+
+.add-filter-container {
+  padding: 8px 24px;
+  border-bottom: 1px solid var(--border-100);
+}
+
+.add-filter-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.add-filter-wrapper .add-filter-content {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+}
+
+.filter-text {
+  padding: 5px 6px;
+  font: var(--text-body-2);
+  color: var(--text-high-emphasis);
+}
+
+.add-filter-wrapper .add-filter-content .filter-icon {
+  padding: 7px 0px;
+}
+
+::ng-deep .cdk-overlay-pane {
+  top: 188px !important;
+}
+
+.filter-container{
+  width: 100%;
+  display: flex;
+}
+
+app-filtered-selector{
+  width: 100%;
+}
+
+.add-filter-wrapper .clear-filter-text {
+  margin-left: auto;
+  font: var(--text-body-2);
+  color: var(--text-low-emphasis);
+  cursor: pointer;
+}
+
+.alternate-filter-container {
+  padding: 12px 24px;
+  background-color: var(--icons-300);
+  color: var(--background-white);
+  font: var(--text-body-2);
+  height: 44px;
+}
+
+.alternate-filter-wrapper {
+  display: flex;
+  height: 20px;
+  align-items: center;
+}
+
+.alternate-filter-wrapper .filters-selected-text {
+  /* flex: 2; */
+}
+
+.alternate-filter-wrapper .exception-options-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+}
+
+.alternate-filter-wrapper .exception-options-container .exception-btn {
+  cursor: pointer;
+  padding: 0px 14px;
+}
+
+.alternate-filter-wrapper .exception-options-container .cancel-btn {
+  padding-right: 0px;
+}
+
+.alternate-filter-wrapper .exception-options-container .separator {
+  cursor: auto;
+}
+
+.pagination div {
+  min-height: 10px;
+  min-width: 25px;
+  padding: 5px 5px;
+  margin: 0px 5px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.pagination .bucketSelector {
+  background-color: var(--primary-100);
+  border-radius: 4px;
+}
+
+#rowsPerPage {
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
 .sub-head {
   padding: 16px 24px;
   background-color: var(--background-white);
   border-bottom: solid 2px var(--border-100);
-  font-size: 1em;
+  font: var(--text-medium-font-family);
   min-height: 3em;
   display: flex;
   align-items: center;
@@ -35,7 +149,7 @@
   border: 1px solid var(--border-100);
   font-size: 1em;
   overflow: hidden;
-  min-height: 11em;
+  min-height: 500px;
   flex-grow: 1;
 }
 
@@ -48,11 +162,11 @@
 }
 
 .data-table-content {
+  height: 100%;
   position: relative;
   overflow-y: hidden;
   overflow-x: auto;
   min-height: 7em;
-  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -83,6 +197,10 @@
   color: var(--primary-400);
 }
 
+.data-table-rows:hover a {
+  border-bottom: 1px solid var(--neutral-300);
+}
+
 .data-table-head {
   border-bottom: 2px solid var(--border-100);
   font-size: var(--text-body-2-font-size);
@@ -105,17 +223,24 @@
   background-color: var(--background-white);
 }
 
+.data-table-rows:hover .details-btn{
+  display: contents;
+} 
+
 .data-table-rows:hover {
   background-color: #e6e6e6;
+  display: flex;
 }
 
 .row-cells {
-  font-size: 1em;
-  min-height: 0.66em;
+  font: var(--text-body-2);
+  color: var(--text-high-emphasis);
+  flex: none;
+  order: 0;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  padding: 12px 16px 12px 24px;
+  padding: 16px;
 }
 
 .row-cells div {
@@ -137,16 +262,26 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  /* padding-bottom: 2px; */
-  /*text-decoration: underline;*/
+}
+
+.details-wrapper{
+  width: 230px;
+  font: var(--text-body-2);
+  color: var(--text-high-emphasis);
+  overflow-wrap: anywhere;
+}
+
+
+.details-btn{
+  position: relative;
+  right: 30px;
+  display: none;
 }
 
 .head-cells {
-  font-family: var(--text-medium-font-family);
-  font-size: var(--text-body-2-font-size);
-  font-weight: var(--text-font-weight);
+  font: var(--text-body-2);
   color: var(--text-medium-emphasis);
-  padding: 16px 24px;
+  padding: 16px 16px;
 }
 
 .table-cells {
@@ -195,13 +330,24 @@
   padding: 16px 24px;
 }
 
+.data-table-paginator-wrap .paginator-size-selector {
+  font: var(--text-body-2);
+  color: var(--text-low-emphasis);
+}
+
+.data-table-paginator-wrap .paginator-size-selector #rowsPerPage {
+  font: var(--text-body-2);
+  color: var(--text-medium-emphasis);
+}
+
 .test {
   top: 0;
 }
 
 .paginator-txt {
   letter-spacing: 0.2px;
-  color: #555555;
+  font: var(--text-body-2);
+  color: var(--text-low-emphasis);
   margin: 0 1.5em;
   min-width: 10em;
   text-align: right;
@@ -220,6 +366,8 @@
 .paginator-arrow img {
   height: 1em;
   transition: 0.3s ease;
+  filter: invert(25%) sepia(93%) saturate(123%) hue-rotate(160deg)
+    brightness(93%) contrast(101%);
 }
 
 .paginator-arrow.rotate180 {
@@ -299,15 +447,14 @@
 }
 
 .details-bar-inner {
-  padding: 1.1em 2em;
-  max-height: 100%;
-  overflow: hidden;
-  word-break: break-word;
-}
-
-.details-bar-inner:hover {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 16px 24px;
+  gap: 20px;
   overflow: auto;
-  overflow: overlay;
+
 }
 
 .details-bar-header {
@@ -328,38 +475,78 @@
 }
 
 .details-cell {
-  flex-grow: 1;
-  min-width: 50%;
-  padding: 1em 1em 1em 0.4em;
-  /*text-transform: capitalize;*/
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
 
 .details-cell-head {
-  padding-bottom: 0.833em;
-  font-size: 0.86em;
-  text-transform: capitalize;
+  font: var(--text-caption);
+  width: 120px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  color: var(--text-medium-emphasis);
 }
 
 .details-cell-value {
-  white-space: pre-line;
-  font-size: 1.1em;
-  font-family: ex2-medium;
-  line-height: 1.3;
+  font: var(--text-body-2);
+  color: var(--text-high-emphasis);
+
 }
 
 .details-cell-value.no-data {
-  color: #cdcdcd;
+  color: var(--text-low-emphasis);
+  font: var(--text-body-2);
   text-transform: capitalize;
 }
 
 .fade {
   opacity: 0.3;
+  filter: invert(72%) sepia(15%) saturate(174%) hue-rotate(164deg)
+    brightness(88%) contrast(89%);
 }
 
 .data-table-img {
   height: 0.75em;
   margin: 0 0.2em;
 }
+
+.data-table-rows:hover {
+  background-color: #F9F9F9;
+  display: flex;
+}
+
+.data-table-rows button {
+display: none;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 4px 8px;
+gap: 7px;
+width: 65px;
+height: 28px;
+background: var(--border-100);
+border-radius: 4px;
+flex: none;
+order: 0;
+flex-grow: 0;
+font: var(--text-body-2);
+color: var(--primary-500);
+}
+
+.data-table-rows:hover button {
+  display:flex;
+  right: 18px;
+  position: absolute;
+  z-index: 10;
+  border: none;
+}
+
 
 .enable-scroll {
   color: #383c4d;
@@ -420,7 +607,7 @@
 .checkbox {
   width: 18px;
   height: 18px;
-  margin-left: 14px;
+  margin-left: 24px;
   flex-shrink: 0;
 }
 
@@ -527,8 +714,6 @@
 
 .column-wrapper.flex div {
   text-shadow: none;
-  font-family: var(--text-medium-font-family);
-  font-size: var(--text-body-2-font-size);
-  font-weight: var(--text-font-weight);
+  font: var(--text-body-2);
   color: var(--text-high-emphasis);
 }
