added feature open resoutltion url in policy knowledge in new tab

--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
           </div>
-       <a    href="{{resolutionUrl}}" > <div  class="pk-resolution-wrapper"> <h5 style="font-size:1em;color:var(--primary-500); font-weight: 600;">Learn more</h5> <img  style="height: 0.91em;margin-left: 0.5vw;margin-top: 0.1%;" src="../assets/icons/left-arrow.svg"> </div>    </a>    
+       <a    href="{{resolutionUrl}}" target="_blank" rel="noopener noreferrer" > <div  class="pk-resolution-wrapper"> <h5 style="font-size:1em;color:var(--primary-500); font-weight: 600;">Learn more</h5> <img  style="height: 0.91em;margin-left: 0.5vw;margin-top: 0.1%;" src="../assets/icons/left-arrow.svg"> </div>    </a>    
 
 
           
