--- a/webapp/src/app/shared/data-table/data-table.component.html
+++ b/webapp/src/app/shared/data-table/data-table.component.html
@@ -150,7 +150,7 @@
                  currentRowData = row; goToDetails(currentRowData, column)
                " *ngIf="row[column].link && row[column].text">
                 <div class="flex flex-align-center each-cell-list-row">
-                  <div>{{ row[column].text }}</div>
+                  <div class="column-text">{{ row[column].text }}</div>
                   <app-copy-element [class.hide]="
                      ((!row[column].text &&
                        row[column].text !== 0 &&
