--- a/webapp/src/app/post-login-app/common/asset-switcher/asset-switcher.component.html
+++ b/webapp/src/app/post-login-app/common/asset-switcher/asset-switcher.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-align-center">
   <a
-    (click)="$event.stopPropagation(); handleAssetGroupFlow()"
+    (click)="$event.stopPropagation(); openAgModal()"
     class="asset-group-selection"
     [class.active]="showRecents && recentTiles.length"
   >
