--- a/webapp/src/app/shared/title-burger-head/title-burger-head.component.html
+++ b/webapp/src/app/shared/title-burger-head/title-burger-head.component.html
@@ -29,6 +29,10 @@
             <app-searchable-dropdown (selection)='selectionDD($event)' [placeholder]="'Search filter tags'"
                 [items]='dropDowndata'></app-searchable-dropdown>
         </div>
+        <div class='relative search-container' *ngIf='showSearch && subHeadTitle!="Policy Violations"'>
+            <input required type='text' class='header-search-input' id='headSearch{{tableIdAppend}}' (keydown)="keyDownFunction($event)" [(ngModel)]='searchQuery' (ngModelChange)='searchCalled()'>
+            <label class='absolute search-label' for='headSearch{{tableIdAppend}}'> <img class='pointer' style="height: 1.33em;" src='../assets/icons/search.svg'></label>
+        </div>
         <div *ngIf='popRows' (click)="$event.stopPropagation(); emitRowClicked('Download data');"
             class='contextual-menu-img flex relative' tabindex='1'>
             <img class='pointer' style="height: 1.33em; transition: 0.2s ease;" src='assets/icons/Download-active.svg'>
