--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
@@ -59,7 +59,7 @@
                    </div>
                     <div class='pk-desc flex flex-align-end flex-between'>
                         <div class="flex flex-align-end">
-                            <img alt='{{cards.provider}}' class="cloud-img" src="../../../../../assets/icons/{{cards.provider}}-grey.svg">
+                            <img alt='{{cards.provider}}' class="cloud-img" src="../../../../../assets/icons/{{cards.provider}}-color.svg">
                         </div>
                         <div class='flex flex-align-end flex-col'>
                             <div *ngIf="cards.autoFixEnabled" class="pk-date flex">
