--- a/webapp/src/app/pacman-features/secondary-components/aws-app-tile/aws-app-tile.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/aws-app-tile/aws-app-tile.component.html
@@ -14,7 +14,7 @@
 
  <div *ngIf="awsResourceName != 'view-all'" [ngClass]="{'active' : active}" class="aws-app-type-container ">
     <div class="aws-app-details flex flex-row">
-        <img src="../../../../assets/icons/asset-a-icon.svg" />
+        <img src="../../../../assets/icons/{{assetGroup}}-color.svg" />
         <div title='{{awsResourceName | uppercase}}' class="type">{{awsResourceName}}</div>
         <div class="instances" *ngIf="resourceInstances !== undefined">{{resourceInstances}}</div>
     </div>
