--- a/webapp/src/app/pacman-features/secondary-components/compliance-overview-trend/compliance-overview-trend.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/compliance-overview-trend/compliance-overview-trend.component.html
@@ -15,7 +15,7 @@
 <a (click)="closeOverallComplianceTrendModal()">
   <app-overlay></app-overlay>
 </a>
-<div #complianceOverviewContainer class="issue-trend-wrapper">
+<div #complianceOverviewContainer class="issue-trend-wrapper-2">
   <div class="multiline-brush-zoom-container">
     <div class="sub-header">
       <div class="sub-header-wrapper">
