--- a/webapp/src/app/pacman-features/secondary-components/issues-trend-history/issues-trend-history.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/issues-trend-history/issues-trend-history.component.html
@@ -14,7 +14,7 @@
 <a (click)="closeOverallComplianceTrendModal()">
   <app-overlay></app-overlay>
 </a>
-<div #issuesHistoryContainer class="issue-trend-wrapper">
+<div #issuesHistoryContainer class="issue-trend-wrapper-3">
   <div class="multiline-brush-zoom-container">
     <div class="sub-header">
       <div class="sub-header-wrapper">
