--- a/webapp/src/app/post-login-app/common/header/header.component.html
+++ b/webapp/src/app/post-login-app/common/header/header.component.html
@@ -22,8 +22,8 @@
         <img src="/assets/images/user-image.png" alt="" />
       </div>
       <div class="user-info-wrapper">
-        <div class="user-name">Admin</div>
-        <div class="user-email">admin@paladin.com</div>
+        <div class="user-name">{{userName}}</div>
+        <div class="user-email">{{userEmail}}</div>
       </div>
       <div title="Logout" class="user-logout-modal-btn" >
         <img
