--- a/webapp/src/app/pacman-features/modules/admin/system-management/system-management.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/system-management/system-management.component.html
@@ -16,13 +16,7 @@
 <div
   class="floating-widgets-section-full flex flex-col compliance-dashboard-wrapper"
 >
-  <app-breadcrumb
-    [breadcrumbLinks]="breadcrumbLinks"
-    [breadcrumbArray]="breadcrumbArray"
-    [isCustomParentRoute]="true"
-    [parentRouteName]="'admin'"
-    [breadcrumbPresent]="breadcrumbPresent"
-  ></app-breadcrumb>
+  <div class="padding-top"></div>
   <div
     class="floating-widgets-header flex flex-between align-start w-100 no-shrink"
   >
