--- a/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
@@ -13,6 +13,10 @@
  -->
 
 <div class="violations-table" [class.admin-rights]='adminAccess'>
+    <div class="flex flex-align-center" style="padding-bottom: 18px; " *ngIf="backButtonRequired">
+        <img class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+        <h1 class="title-text nowrap-ellipsis">{{pageTitle}}</h1>
+    </div>
     <app-data-table [(cbModel)]="cbModel" (cbClicked)="checkBoxClicked($event)" [checkBox]="adminAccess"
         [searchTextValues]="searchTxt" [showGenericMessage]="showGenericMessage" [errorValue]="errorValue"
         [parentName]="'policyDetailsTableMessage'" [showingArr]="showingArr" [outerArr]="outerArr"
