--- a/webapp/src/app/pacman-features/modules/compliance/tagging-compliance/tagging-compliance.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/tagging-compliance/tagging-compliance.component.html
@@ -14,7 +14,7 @@
 
  <div class="compliance-dashboard-wrapper flex flex-between">
     <div class="floating-widgets-section flex flex-col">
-        <app-breadcrumb [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
+        <div class="padding-top"></div>
         <div class="floating-widgets-header flex flex-between">
             <div>
                 <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
