--- a/webapp/src/app/pacman-features/secondary-components/issues-trend-history/issues-trend-history.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/issues-trend-history/issues-trend-history.component.css
@@ -12,7 +12,7 @@
  * limitations under the License.
  */
 
-.issue-trend-wrapper {
+.issue-trend-wrapper-3 {
   min-height: 435px;
   background-color: white;
   width: 72vw;
